Fix horizontal scrollbars being too thick
Practically there should be only one horizontal scrollbar allowed in the UI - the one on File Explorer and it should be same experience as vertical scrollbars

--- a/.theme/scrollbars.scss
+++ b/.theme/scrollbars.scss
@@ -3,10 +3,11 @@ SCROLLBARS
 ----------------------------------------------------------------*/
 
 /*----------------------------------------------------------------
-theme default thin scrollbars */
+theme-default thin scrollbars */
 
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track {
